--- a/src/pages/Shared/Header/Header.css
+++ b/src/pages/Shared/Header/Header.css
@@ -1,3 +1,4 @@
 .bg-header {
-    background-color: rgba(73, 53, 47, 0.699);
+    background-color: rgba(0, 0, 0, 0.178);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
 }
